// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle fetch_more_posts_FAILURE action 1`] = `
Array [
  Object {
    "type": "fetch_more_posts_REQUEST",
  },
  Object {
    "error": "Ops! We have some internal error :)",
    "type": "fetch_more_posts_FAILURE",
  },
]
`;

exports[`should handle fetch_more_posts_SUCCESS action 1`] = `
Array [
  Object {
    "type": "fetch_more_posts_REQUEST",
  },
  Object {
    "data": Object {
      "children": Array [
        Object {
          "data": Object {
            "id": "98vj9e",
            "thumbnail": "https://b.thumbs.redditmedia.com/NFJ5zzCUnxTgAl71EkjSSCePc7wtcCLqTdbYgrwJkdU.jpg",
            "title": "Blinks of affection",
            "url": "https://v.redd.it/1zhxx58rhp421",
          },
        },
        Object {
          "data": Object {
            "id": "a6q94b",
            "thumbnail": "https://b.thumbs.redditmedia.com/cjYmtjKiy9OT1y43RFMuTkcH_WmTM66RsSuN7c6xkhA.jpg",
            "title": "This church looks like a gingerbread house.",
            "url": "https://i.imgur.com/GsoJi0d.gifv",
          },
        },
      ],
    },
    "type": "fetch_more_posts_SUCCESS",
  },
]
`;

exports[`should handle fetch_posts_FAILURE action 1`] = `
Array [
  Object {
    "type": "fetch_posts_REQUEST",
  },
  Object {
    "error": "Ops! We have some internal error :)",
    "type": "fetch_posts_FAILURE",
  },
]
`;

exports[`should handle fetch_posts_SUCCESS action 1`] = `
Array [
  Object {
    "type": "fetch_posts_REQUEST",
  },
  Object {
    "data": Object {
      "children": Array [
        Object {
          "data": Object {
            "id": "98vj9e",
            "thumbnail": "https://b.thumbs.redditmedia.com/NFJ5zzCUnxTgAl71EkjSSCePc7wtcCLqTdbYgrwJkdU.jpg",
            "title": "Blinks of affection",
            "url": "https://v.redd.it/1zhxx58rhp421",
          },
        },
        Object {
          "data": Object {
            "id": "a6q94b",
            "thumbnail": "https://b.thumbs.redditmedia.com/cjYmtjKiy9OT1y43RFMuTkcH_WmTM66RsSuN7c6xkhA.jpg",
            "title": "This church looks like a gingerbread house.",
            "url": "https://i.imgur.com/GsoJi0d.gifv",
          },
        },
      ],
    },
    "type": "fetch_posts_SUCCESS",
  },
]
`;

exports[`should handle fetch_refreshed_posts_FAILURE action 1`] = `
Array [
  Object {
    "type": "fetch_refreshed_posts_REQUEST",
  },
  Object {
    "error": "Ops! We have some internal error :)",
    "type": "fetch_refreshed_posts_FAILURE",
  },
]
`;

exports[`should handle fetch_refreshed_posts_SUCCESS action 1`] = `
Array [
  Object {
    "type": "fetch_refreshed_posts_REQUEST",
  },
  Object {
    "data": Object {
      "children": Array [
        Object {
          "data": Object {
            "id": "98vj9e",
            "thumbnail": "https://b.thumbs.redditmedia.com/NFJ5zzCUnxTgAl71EkjSSCePc7wtcCLqTdbYgrwJkdU.jpg",
            "title": "Blinks of affection",
            "url": "https://v.redd.it/1zhxx58rhp421",
          },
        },
        Object {
          "data": Object {
            "id": "a6q94b",
            "thumbnail": "https://b.thumbs.redditmedia.com/cjYmtjKiy9OT1y43RFMuTkcH_WmTM66RsSuN7c6xkhA.jpg",
            "title": "This church looks like a gingerbread house.",
            "url": "https://i.imgur.com/GsoJi0d.gifv",
          },
        },
      ],
    },
    "type": "fetch_refreshed_posts_SUCCESS",
  },
]
`;
